--- a/resume.html
+++ b/resume.html
@@ -19,13 +19,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
                     </li>
                 </ul>
@@ -39,7 +39,7 @@
     <!-- Begin page content -->
     <main role="main" class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">About Me</h1>
+            <h1 class="mt-5">Resume</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur ullam, animi modi, unde velit debitis doloremque dicta distinctio ducimus in soluta totam. Saepe consectetur recusandae veritatis maxime ab delectus ea.</p>
         </div>
     </main>
