--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,13 @@
     <!-- Begin page content -->
     <main role="main" class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Resume</h1>
+            <h1 class="mt-5 display-4">Resume</h1>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Welcome!</strong> This page is still a work in progress, so expect a lot to change. Check back often to see what's new.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur ullam, animi modi, unde velit debitis doloremque dicta distinctio ducimus in soluta totam. Saepe consectetur recusandae veritatis maxime ab delectus ea.</p>
         </div>
     </main>
