--- a/projects.html
+++ b/projects.html
@@ -13,25 +13,27 @@
     <header>
         <!-- Fixed navbar -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">727021</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="resume.html" class="nav-link disabled"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
-                    </li>
-                </ul>
-                <span class="navbar-text">
-                    <a title="GitHub/727021" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
-                </span>
+            <div class="container">
+                <a class="navbar-brand" href="#">727021</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="resume.html" class="nav-link disabled"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        <a title="GitHub/727021" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
+                    </span>
+                </div>
             </div>
         </nav>
     </header>
@@ -85,9 +87,9 @@
                                         <div class="col-4">
                                             <div class="btn-toolbar float-right" role="toolbar">
                                                 <div class="btn-group mr-2" role="group">
-                                                    <a role="button" class="btn btn-secondary" href="#"><i class="fas fa-star"><sub>0</sub></i></a>
-                                                    <a role="button" class="btn btn-secondary" href="#"><i class="fas fa-code-branch"><sub>0</sub></i></a>
-                                                    <a role="button" class="btn btn-primary" href="#"><i class="fas fa-code"></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" title="Stargazers" role="button" class="btn btn-secondary" href="#"><i class="fas fa-star"><sub>0</sub></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" title="Forks" role="button" class="btn btn-secondary" href="#"><i class="fas fa-code-branch"><sub>0</sub></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" title="Source" role="button" class="btn btn-primary" href="#"><i class="fas fa-code"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -117,5 +119,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+    </script>
 </body>
 </html>
