--- a/resume.html
+++ b/resume.html
@@ -13,25 +13,27 @@
     <header>
         <!-- Fixed navbar -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">727021</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
-                    </li>
-                </ul>
-                <span class="navbar-text">
-                    <a title="GitHub/727021" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
-                </span>
+            <div class="container">
+                <a class="navbar-brand" href="#">727021</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        <a title="GitHub/727021" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
+                    </span>
+                </div>
             </div>
         </nav>
     </header>
