--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column h-100">
     <header>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">727021</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
                         </li>
                     </ul>
                     <span class="navbar-text">
-                        <a title="GitHub/727021" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
+                        <a role="button" class="btn btn-dark" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
                     </span>
                 </div>
             </div>
