Improve projects.html responsiveness Add footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="main.css" /> -->
+    <link rel="stylesheet" href="sticky-footer.css">
     <title>GitHub / 727021</title>
 </head>
 <body class="d-flex flex-column h-100">
@@ -39,7 +39,7 @@
     </header>
 
     <!-- Begin page content -->
-    <main role="main" class="flex-shrink-0">
+    <main role="main" class="flex-shrink-0 mb-1">
         <div class="container">
             <h1 class="mt-5 display-4">About Me</h1>
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -51,6 +51,11 @@
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur ullam, animi modi, unde velit debitis doloremque dicta distinctio ducimus in soluta totam. Saepe consectetur recusandae veritatis maxime ab delectus ea.</p>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted text-center">Copyright &copy; 727021</p>
+        </div>
+    </footer>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
