--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="sticky-footer.css">
     <title>GitHub / 727021</title>
 </head>
 <body class="d-flex flex-column h-100">
@@ -38,7 +39,7 @@
     </header>
 
     <!-- Begin page content -->
-    <main role="main" class="flex-shrink-0">
+    <main role="main" class="flex-shrink-0 mb-1">
         <div class="container">
             <h1 class="mt-5 display-4">Projects</h1>
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -68,11 +69,11 @@
                 <!-- C# Tab -->
                 <div class="tab-pane fade show active" id="cs" role="tabpanel" aria-labelledby="cs-tab">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-12 col-lg-4 mb-1">
                             <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-12 col-lg-8">
                             <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                             </div>
                         </div>
@@ -81,11 +82,11 @@
                 <!-- C++ Tab -->
                 <div class="tab-pane fade" id="cpp" role="tabpanel" aria-labelledby="cpp-tab">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-sm-12 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8">
+                            <div class="col-8 col-sm-12">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -94,11 +95,11 @@
                 <!-- Java Tab -->
                 <div class="tab-pane fade" id="java" role="tabpanel" aria-labelledby="java-tab">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-sm-12 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8">
+                            <div class="col-8 col-sm-12">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -107,11 +108,11 @@
                 <!-- Web Tab -->
                 <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="web-tab">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-sm-12 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8">
+                            <div class="col-8 col-sm-12">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -120,11 +121,11 @@
                 <!-- Other Tab -->
                 <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-sm-12 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8">
+                            <div class="col-8 col-sm-12">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -133,6 +134,11 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted text-center">Copyright &copy; 727021</p>
+        </div>
+    </footer>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
