--- a/projects.html
+++ b/projects.html
@@ -82,11 +82,11 @@
                 <!-- C++ Tab -->
                 <div class="tab-pane fade" id="cpp" role="tabpanel" aria-labelledby="cpp-tab">
                         <div class="row">
-                            <div class="col-4 col-sm-12 mb-1">
+                            <div class="col-12 col-lg-4 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8 col-sm-12">
+                            <div class="col-12 col-lg-8">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -95,11 +95,11 @@
                 <!-- Java Tab -->
                 <div class="tab-pane fade" id="java" role="tabpanel" aria-labelledby="java-tab">
                         <div class="row">
-                            <div class="col-4 col-sm-12 mb-1">
+                            <div class="col-12 col-lg-4 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8 col-sm-12">
+                            <div class="col-12 col-lg-8">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -108,11 +108,11 @@
                 <!-- Web Tab -->
                 <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="web-tab">
                         <div class="row">
-                            <div class="col-4 col-sm-12 mb-1">
+                            <div class="col-12 col-lg-4 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8 col-sm-12">
+                            <div class="col-12 col-lg-8">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
@@ -121,11 +121,11 @@
                 <!-- Other Tab -->
                 <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
                         <div class="row">
-                            <div class="col-4 col-sm-12 mb-1">
+                            <div class="col-12 col-lg-4 mb-1">
                                 <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
                                 </div>
                             </div>
-                            <div class="col-8 col-sm-12">
+                            <div class="col-12 col-lg-8">
                                 <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                                 </div>
                             </div>
