--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,11 @@
     <main role="main" class="flex-shrink-0 mb-1">
         <div class="container">
             <h1 class="mt-5 display-4">Projects</h1>
+            <noscript>
+                <div class="alert alert-danger" role="alert" id="noscript">
+                    <strong>Oops!</strong> It looks like you have JavaScript disabled! This page requires JavaScript to function properly. Learn how to enable it <a target="_blank" href="https://www.enable-javascript.com/">here</a>.
+                </div>
+            </noscript>
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <strong>Welcome!</strong> This page is still a work in progress, so expect a lot to change. Check back often to see what's new.
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -145,5 +150,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <script>$(function(){$("#noscript").hide();});</script>
 </body>
 </html>
