--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted text-center">Copyright &copy; 727021</p>
+            <div class="row">
+                <div class="col-4"><p class="text-muted text-left">Made with <a target="_blank" href="https://getbootstrap.com/" style="color: #563d7c">Bootstrap</a></p></div>
+                <div class="col-4"><p class="text-muted text-center">Copyright © 727021</p></div>
+                <div class="col-4"><p class="text-muted text-right"><a href="#top" style="color: #6c757d" id="toplink"><i class="fas fa-angle-double-up"></i></a></p></div>
+            </div>
         </div>
     </footer>
 
@@ -66,6 +70,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script>$(function(){$("#noscript").hide();});</script>
+    <script>
+        $(function(){$("#noscript").hide();});
+        $("a[href='#top']").click(function(e) {
+            e.preventDefault();
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+            return false;
+        });
+    </script>
 </body>
 </html>
