Replace footer with hidden top link

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="sticky-footer.css">
+    <link rel="stylesheet" href="main.css">
     <title>GitHub / 727021</title>
 </head>
 <body class="d-flex flex-column h-100">
@@ -144,28 +144,13 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4"><p class="text-muted text-left">Made with <a target="_blank" href="https://getbootstrap.com/" style="color: #563d7c">Bootstrap</a></p></div>
-                <div class="col-4"><p class="text-muted text-center">Copyright © 727021</p></div>
-                <div class="col-4"><p class="text-muted text-right"><a href="#top" style="color: #6c757d" id="toplink"><i class="fas fa-angle-double-up"></i></a></p></div>
-            </div>
-        </div>
-    </footer>
+
+    <a class="btn btn-outline-secondary" href="#top"><i class="fas fa-angle-double-up"></i></a>
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="main.js"></script>
-    <script>
-        $(function(){$("#noscript").hide();});
-        $("a[href='#top']").click(function(e) {
-            e.preventDefault();
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-            return false;
-        });
-    </script>
 </body>
 </html>
