--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </ul>
                     <span class="navbar-text">
                         <a role="button" class="btn btn-dark" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
+                        <a role="button" class="btn btn-dark" href="https://www.linkedin.com/in/andrewschim/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </span>
                 </div>
             </div>
