--- a/resume.html
+++ b/resume.html
@@ -1,69 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Andrew Schimelpfening" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-    <title>GitHub / 727021</title>
 </head>
-<body class="d-flex flex-column h-100">
-    <header>
-        <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">727021</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link"><i class="fas fa-home"></i><span class="sr-only">Home</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="projects.html" class="nav-link"><i class="fas fa-code"></i><span class="sr-only">Projects</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i><span class="sr-only">Resume</span></a>
-                        </li>
-                    </ul>
-                    <span class="navbar-text">
-                        <a role="button" class="btn btn-dark" href="https://github.com/727021" target="_blank"><i class="fab fa-github"></i></a>
-                        <a role="button" class="btn btn-dark" href="https://www.linkedin.com/in/andrewschim/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    </span>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <!-- Begin page content -->
-    <main role="main" class="flex-shrink-0 mb-1">
+<body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container">
-            <h1 class="mt-5 display-4">Resume</h1>
-            <noscript>
-                <div class="alert alert-danger" role="alert" id="noscript">
-                    <strong>Oops!</strong> It looks like you have JavaScript disabled! This page requires JavaScript to function properly. Learn how to enable it <a target="_blank" href="https://www.enable-javascript.com/">here</a>.
-                </div>
-            </noscript>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Welcome!</strong> This page is still a work in progress, so expect a lot to change. Check back often to see what's new.
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur ullam, animi modi, unde velit debitis doloremque dicta distinctio ducimus in soluta totam. Saepe consectetur recusandae veritatis maxime ab delectus ea.</p>
+        <a class="navbar-brand" href="#">727021</a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html"><i class="fas fa-user"></i> About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html"><i class="fas fa-list-ul"></i> Projects</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
+                </li>
+            </ul>
         </div>
-    </main>
-
-    <a class="btn btn-outline-secondary" href="#top"><i class="fas fa-angle-double-up"></i></a>
-
-    <!-- Scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        </div>
+    </nav>
+    <div class="container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quos commodi architecto impedit fugit placeat aliquid ipsam, doloribus minima iste! Deserunt officia illo repudiandae corrupti ipsam voluptate ipsum non fugit!
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
 </body>
 </html>
