--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <style>
+        a[data-toggle="collapse"]:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
-        <a class="navbar-brand" href="#">727021</a>
+        <span class="navbar-brand">727021</span>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,11 +40,11 @@
     </nav>
     <div class="container">
         <h1 class="display-4">Projects</h1>
-        <div id="accordianId" role="tablist" aria-multiselectable="true">
+        <div id="projectsAccordion" role="tablist" aria-multiselectable="true">
             <div class="card">
                 <div class="card-header" role="tab" id="project1HeaderId">
                     <h5 class="mb-0">
-                        <a data-toggle="collapse" data-parent="#accordianId" href="#project1" aria-expanded="true" aria-controls="project1">
+                        <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project1" aria-expanded="true" aria-controls="project1">
                             <i id="angle" class="fas fa-plus"></i> Project 1
                         </a>
                     </h5>
@@ -53,7 +58,7 @@
             <div class="card">
                 <div class="card-header" role="tab" id="project2HeaderId">
                     <h5 class="mb-0">
-                        <a data-toggle="collapse" data-parent="#accordianId" href="#project2" aria-expanded="true" aria-controls="project2">
+                        <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project2" aria-expanded="true" aria-controls="project2">
                             <i id="angle" class="fas fa-plus"></i> Project 2
                         </a>
                     </h5>
@@ -71,17 +76,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script><!-- For markdown in project descriptions -->
     <script>
         // Only open one project at a time
         $(".collapse").on('show.bs.collapse', function() {
+            $(`#${$(this).attr("aria-labelledby")} #angle`).removeClass("fa-plus").addClass("fa-minus")
             $collapse = $(this)
             $(".collapse").each(function() {
                 if ($(this) != $collapse)
                     $(this).collapse('hide')
             })
-        })
-        $(".collapse").on('show.bs.collapse', function() {
-            $(`#${$(this).attr("aria-labelledby")} #angle`).removeClass("fa-plus").addClass("fa-minus")
         })
         $(".collapse").on('hide.bs.collapse', function() {
             $(`#${$(this).attr("aria-labelledby")} #angle`).removeClass("fa-minus").addClass("fa-plus")
@@ -89,7 +93,7 @@
 
         // Load projects from 'projects.json' and GitHub
         $(function() {
-
+            // use marked() to parse markdown
         })
     </script>
 </body>
