Add more projects

--- a/projects.html
+++ b/projects.html
@@ -34,44 +34,12 @@
         </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mb-2">
         <h1 class="display-4">Projects</h1>
         <div id="projectsAccordion" role="tablist" aria-multiselectable="true">
             <div class="card">
                 <div class="card-header" role="tab" id="project1HeaderId">
-                    <div class="row">
-                        <div class="col">
-                            <h5 class="mb-0">
-                                <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project1" aria-expanded="true" aria-controls="project1">
-                                    <i id="angle" class="fas fa-plus"></i> Project 1
-                                </a>
-                            </h5>
-                            <small class="text-muted">Project 1 Subtitle</small>
-                        </div>
-                        <div class="col text-right">
-                            <a href="#" class="btn btn-secondary" role="button" data-toggle="tooltip" title="Website"><i class="fas fa-desktop"></i></a>
-                            <a href="#" class="btn btn-primary" role="button" data-toggle="tooltip" title="Github"><i class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div id="project1" class="collapse in" role="tabpanel" aria-labelledby="project1HeaderId">
-                    <div class="card-body">
-                        Project 1 content
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" role="tab" id="project2HeaderId">
-                    <h5 class="mb-0">
-                        <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project2" aria-expanded="true" aria-controls="project2">
-                            <i id="angle" class="fas fa-plus"></i> Project 2
-                        </a>
-                    </h5>
-                </div>
-                <div id="project2" class="collapse in" role="tabpanel" aria-labelledby="project2HeaderId">
-                    <div class="card-body">
-                        Project 2 content
-                    </div>
+                    <h5 class="text-center mb-0 text-primary"><span class="spinner-border spinner-sm" role="status"></span></h5>
                 </div>
             </div>
         </div>
