Add GitHub/LinkedIn links

--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <style>
-        /* Size of embedded pdf */
-        #resume {
-            width: 100%;
-            height: 70vh;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -35,6 +29,12 @@
                 </li>
                 <li class="nav-item active">
                     <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
+                </li>
+                <li class="nav-item">
+                    <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
                 </li>
             </ul>
         </div>
