--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <li class="nav-item">
                     <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
                 </li>
+                <li class="nav-item">
+                    <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
+                </li>
+                <li class="nav-item">
+                    <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                </li>
             </ul>
         </div>
         </div>
