Fix resume download link

--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
                 <h1 class="display-4">Resume</h1>
             </div>
             <div class="col text-right pt-3">
-                <a target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download    "></i></a>
+                <a download target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download    "></i></a>
             </div>
         </div>
         <object class="embed-responsive" data="resume.pdf" type="application/pdf" id="resume">
