Add about page layout

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     </nav>
     <div class="container">
         <h1 class="display-4">About Me</h1>
-        <img src="https://via.placeholder.com/200" alt="" class="rounded-circle border border-dark mx-auto d-block d-md-inline">
+        <img src="https://via.placeholder.com/200" alt="" class="rounded-circle border float-md-left border-dark mx-auto mr-md-4 d-block d-md-inline">
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo porro qui, tenetur earum eos veritatis, accusantium dolorum consectetur quas amet magni ea. Dolores ducimus esse, recusandae tenetur vel ipsam repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi animi sed, iusto recusandae totam perspiciatis, voluptatibus aliquid a, incidunt esse consectetur doloribus voluptate temporibus repellat! Officiis repudiandae possimus alias voluptatem.
+        A, minus beatae dignissimos iste blanditiis dolorum possimus molestias obcaecati ipsam, neque illum molestiae nesciunt nihil cupiditate repudiandae quo eaque. Pariatur iste illo vero unde ratione quasi. Nobis, alias nulla.
+        Obcaecati voluptas corrupti cum fuga placeat. Nulla, amet? Cumque, obcaecati recusandae quisquam unde velit voluptate nostrum sed earum! Perspiciatis quisquam rem architecto sint consequatur inventore nemo. Quae fugit quisquam maiores!
+        Voluptate officiis itaque magnam illo esse, reprehenderit similique. Reiciendis nisi omnis fugiat amet temporibus ex quasi ea molestiae odit laudantium, non qui debitis, ab delectus, necessitatibus dignissimos? Accusantium, minima fugiat.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
