Add resume loading animation

--- a/projects.html
+++ b/projects.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <title>Projects - Andrew Schimelpfening</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -41,10 +39,10 @@
         </div>
     </nav>
     <div class="container mb-2">
-        <h1 class="display-4">Projects</h1>
+        <h5 class="display-4">Projects</h5>
         <div id="projectsAccordion" role="tablist" aria-multiselectable="true">
-            <div class="card">
-                <div class="card-header" role="tab" id="project1HeaderId">
+            <div class="card" id="loading">
+                <div class="card-header" role="tab">
                     <h5 class="text-center mb-0 text-primary"><span class="spinner-border spinner-sm" role="status"></span></h5>
                 </div>
             </div>
