--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <title>About Me - Andrew Schimelpfening</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -42,11 +41,8 @@
     <div class="container">
         <h1 class="display-4">About Me</h1>
         <img src="https://via.placeholder.com/200" alt="" class="rounded-circle border float-md-left border-dark mx-auto mr-md-4 d-block d-md-inline">
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo porro qui, tenetur earum eos veritatis, accusantium dolorum consectetur quas amet magni ea. Dolores ducimus esse, recusandae tenetur vel ipsam repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi animi sed, iusto recusandae totam perspiciatis, voluptatibus aliquid a, incidunt esse consectetur doloribus voluptate temporibus repellat! Officiis repudiandae possimus alias voluptatem.
-        A, minus beatae dignissimos iste blanditiis dolorum possimus molestias obcaecati ipsam, neque illum molestiae nesciunt nihil cupiditate repudiandae quo eaque. Pariatur iste illo vero unde ratione quasi. Nobis, alias nulla.
-        Obcaecati voluptas corrupti cum fuga placeat. Nulla, amet? Cumque, obcaecati recusandae quisquam unde velit voluptate nostrum sed earum! Perspiciatis quisquam rem architecto sint consequatur inventore nemo. Quae fugit quisquam maiores!
-        Voluptate officiis itaque magnam illo esse, reprehenderit similique. Reiciendis nisi omnis fugiat amet temporibus ex quasi ea molestiae odit laudantium, non qui debitis, ab delectus, necessitatibus dignissimos? Accusantium, minima fugiat.</p>
+        <p class="lead">I'm <b>Andrew Schimelpfening</b>, a junior at BYU-Idaho. I'm pursuing a B.S. in Computer Science, and I'm loving what I'm learning. This site is where I showcase some of the <a href="projects.html">projects</a> I'm most proud of and provide a copy of my current <a href="resume.html">resume</a>.</p>
+        <p>I first started programming in middle school, when I found some online C# tutorials and decided I loved writing code. Since then, I have worked with Java, C++, PHP, NodeJS, Emacs Lisp, and various SQL varieties. I'm currently seeking an internship, and I look forward to a career in software development or a related field. I hope to be able to use my skills and talents to create products that will help others.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
