--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -48,14 +47,23 @@
                 <a download target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download    "></i></a>
             </div>
         </div>
-        <object class="embed-responsive" data="resume.pdf" type="application/pdf" id="resume">
-            <embed class="embed-responsive-item" src="resume.pdf" type="application/pdf">
+        <div class="w-100 text-center" id="loading"><span class="spinner-border text-primary spinner-lg" role="status"></span></div>
+        <object class="embed-responsive" data="resume.pdf" type="application/pdf" id="resume" loading="lazy" style="visibility: hidden;">
+            <embed class="embed-responsive-item" src="resume.pdf" type="application/pdf" id="pdfembed" loading="lazy">
         </object>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>$(() => { $('[data-toggle="tooltip"]').tooltip() })</script>
+    <script>
+        $(() => {
+            $('#resume').on('load', function() {
+                $(this).hide().css('visibility', 'visible').fadeIn()
+                $('#loading').remove()
+             })
+        })
+    </script>
 </body>
 </html>
