Change resume download filename

--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                 <h1 class="display-4">Resume</h1>
             </div>
             <div class="col text-right pt-3">
-                <a download target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download    "></i></a>
+                <a download="Andrew_Schimelpfening_Resume.pdf" target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download"></i></a>
             </div>
         </div>
         <div class="w-100 text-center" id="loading"><span class="spinner-border text-primary spinner-lg" role="status"></span></div>
